syntax = "proto3";

package serialization.generated;
import "protos/mpt.proto";
option java_outer_classname = "BVerifyAPIMessageSerialization";

/**
* OVERALL NOTES:
*	-   an id is a string representing a unique user id 
*		that allows each client to look up that user in a 
* 		pki. 
*/


/**
*   Receipt (this is a stand in for arbitrary data)
*/
message Receipt {
    string warehouse_id = 1;
    string depositor_id = 2;
    string accountant = 3;
    string category = 4;
    string date = 5;
    string insurance = 6;
    double weight = 7;
    double volume = 8;
    double humidity = 9;
    double price = 10;
    string details = 11;
}

/**
* Request for the server to issue a receipt (initiated 
* by a client)
*/
message IssueReceiptRequest {
	string issuer_id = 1;
	string recepient_id = 2;
	Receipt receipt = 3;
	Signature signature = 4;
}

/**
* Response from a client 
*/
message Signature {
	string signer_id = 1;
	bytes signature = 2;
}

/**
* ADS Data msg
*/ 
message ADSData {
	repeated Receipt receipts = 1;
	int32 commitmentNumber = 2;
}

/**
* A sequence of updates (starting from the oldest)
*/
message AuthProof {
	MerklePrefixTrie path = 1;
}







